<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/plant_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"/>

            <ImageButton
                android:id="@+id/plant_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>
        </LinearLayout>

        <!-- Add this LinearLayout for title -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/plants_title_label" />

            <EditText
                android:id="@+id/plants_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plants_title_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Green Spot"
        app:titleTextColor="@color/greenColor"
        app:titleMarginStart="16dp"
        android:elevation="4dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/plants_location_label" />

    <EditText
        android:id="@+id/plants_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the Location"
        android:inputType="text"
        android:gravity="start"
        android:textDirection="ltr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/plants_details_label" />

    <Button
        android:id="@+id/plants_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed September 11 11:56 EST 2023" />

    <CheckBox
        android:id="@+id/plantFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Is Found"/>

    <Button
        android:id="@+id/plant_reporter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_reporter_text"/>

    <Button
        android:id="@+id/plant_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_report_text"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintTop_toBottomOf="@+id/plant_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onDeleteButtonClick" />
</LinearLayout>


